[project]
name = "gitflow-visualizer"
version = "0.1.0"
description = "Visualize GitHub Repository Workflow Activities"
authors = [
    { name = "verssae", email = "sparky@hanyang.ac.kr" }
]
dependencies = [
    "rich>=13.8.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gitflow_visualizer"]

[project.scripts]
gitflow-visualizer = "gitflow_visualizer:main"